2024-08-07  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-get-builddir): New function, split
	off from ebuild-mode-find-workdir.
	(ebuild-mode-find-s): New function.
	(ebuild-mode-map, ebuild-mode-menu): Keybinding and menu entry.
	* ebuild-mode.texi (ebuild-mode): Document ebuild-mode-find-s.

	* ebuild-mode.el (ebuild-mode-find-workdir): Let-bind
	find-file-run-dired to t.

2024-08-05  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-map): Keybindings now use C-c C-e
	as their prefix.
	* ebuild-mode.texi (ebuild-mode): Document the new keybindings.

	* ebuild-mode.el (ebuild-mode, ebuild-run-command)
	(ebuild-mode-get-completion-function, ebuild-mode-run-pkgdev)
	(ebuild-mode-run-pkgcheck, ebuild-repo-mode, find-file-hook):
	Use static-if.

2024-07-03  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-time-string): Use static-if.

	* ebuild-mode.el (ebuild-mode-update-copyright): Replace nested
	ifs with cond.

2024-06-29  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.72 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

	* glep-mode.el (glep-mode-insert-skeleton): Update from GLEP 2,
	specify that all dates must be in UTC.

2024-06-26  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-find-workdir): Display a separate
	error message when the file is not an ebuild.

	* ebuild-mode.el (ebuild-mode-menu): Deactivate entries that are
	not useful in ebuild-eclass-mode.

	* ebuild-mode.el (ebuild-mode-fix-whitespace): Default to ebuild.

2024-06-25  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-fix-whitespace): Add new choice
	'ebuild'.
	(ebuild-repo-mode-before-save): Make fixing of whitespace in
	eclasses conditional on it.

	* ebuild-mode.el (ebuild-eclass-mode): New major mode for editing
	of eclasses, split off from ebuild-mode.
	(auto-mode-alist): Add ebuild-eclass-mode.
	* ebuild-mode.texi (ebuild-eclass-mode): Chapter renamed from